# bikeshed-builder

./: README.md  index.html  install.ps1  install.sh  pyproject.toml  requirements.txt  task.py  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: gh-release-create.yml  poe-build.yml  poe-test.yml  task-build.yml  test-install-scripts.yml
bikeshed/: __main__.py
