[tool.poetry]
package-mode = false
version = "4.1.8"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
bikeshed = "==4.1.8"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pyinstaller = "^6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = "black ."
build = "pyinstaller -y --collect-all=bikeshed --name bikeshed bikeshed/__main__.py"
_test = "dist/bikeshed/bikeshed --version"
test.sequence = ["build", "_test"]
